changed subtitle color

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ a:hover {
 
 #header .small {
   font-size:    90%;
-  color:        grey;
+  color:        greenyellow;
   padding-left: 15px;
 }
 
