--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
   <a href="{{ site.path }}/index.html">Welcome</a> •
   <a href="{{ site.path }}/two.html">Page Two</a> •
   <a href="{{ site.path }}/three.html">Page Three</a> •
-  <a href="{{ site.path }}/constitution.html">US Constitution</a> •
+  <a href="{{ site.path }}/constitution">US Constitution</a> •
   <a href="http://groups.google.com/group/wwwmake">Questions? Comments?</a> •
   <a href="https://github.com/henrythemes/jekyll-starter-theme">About</a>
 </div>
